src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
/* ... */
.minimizedWindow .maximize {
   width: 14px;
   height: 14px;
   background: MAXIMIZE center no-repeat;
   margin: 4px 3px 0 0;
   background-size: 14px 14px;
}
.minimizedWindow .maximize:hover {
   background-image: MAXIMIZESELECTED;
   background-size: 14px 14px;
}
.minimizedWindow .minimize:hover {
   background-image: RESTORESELECTED;
   background-size: 14px 14px;
}
.minimizedWindow .center {
   background-image: PODMINIMIZEDTILE;
   padding-top: 3px;
   padding-bottom: 5px;
}
.minimizedWindow .title {
   margin-left: -4px;
}
.minimizedWindow {
   margin-left: -1px;
   margin-right: -1px;
}



.gwt-SplitLayoutPanel-HDragger, .gwt-SplitLayoutPanel-VDragger {
   background-color: transparent !important;
   border: 0px;
   cursor: move;
}
body.avoid-move-cursor .gwt-SplitLayoutPanel-HDragger {
	cursor: e-resize;
}
body.avoid-move-cursor .gwt-SplitLayoutPanel-VDragger {
   cursor: n-resize;
}
.gwt-SplitLayoutPanel-HDragger {
   background: VERTICALHANDLE no-repeat center;
}
.gwt-SplitLayoutPanel-VDragger {
   background: HORIZONTALHANDLE no-repeat center;
}

.primaryWindowFrameHeader {
   padding: 4px 0 0 12px;
   margin-right: 10px;
   white-space: nowrap;
}
.title, .subtitle {
   display: inline;
   color: black;
   font-size: 11px;
   font-weight: bold;
   text-shadow: white 0px 1px 0px;
   cursor: default;
}
.subtitle {
   color: #999;
   margin-left: 6px;
}

.gwt-TabLayoutPanelTab {
   float: left;
}

/** Document tabs **/
/*
@def TABSTRIPHEIGHT 24px;
@def TABHEIGHT 18px;

.docTabPanel .gwt-TabLayoutPanelTabs {
   background-image: TABBACKGROUND;
   height: 100%;
   padding-left: 6px;
   font-size: 11px;
}

.docTabPanel .gwt-TabLayoutPanelTab {
   cursor: default;
   margin-right: 2px;
   background: inherit;
}
.docTabPanel .gwt-TabLayoutPanelTab-selected {
}
*/
.docTabPanel .closeTabButton {
   margin-top: 4px;
   margin-left: 3px;
}
.gwt-TabLayoutPanel-Workbench .gwt-TabLayoutPanelTab .closeTabButton {
   position: relative;
   top: 5px;
   margin-left: 4px;
}
.closeTabButton {
   filter: literal("alpha(opacity = 40)") !important;
   opacity: 0.4;
}

.closeTabButton:hover {
   filter: literal("alpha(opacity = 100)") !important;
   opacity: 1.0;
}
.tabLayout {
}
.docTabPanel.moduleTabPanel .gwt-TabLayoutPanelTab .gwt-Label {
   font-weight: normal;
   padding-top: 0;
}
.docTabIcon {
   margin-top: 2px;
   margin-right: 3px;
}
.docTabLabel {
   overflow: hidden;
   max-width: 200px;
   white-space: nowrap;
   text-overflow: ellipsis;
}

.docMenuScroll {
   overflow-y: scroll !important;
   overflow-x: hidden;
   margin: -4px;
   padding-right: 15px;
}

/*
.docTabPanel .tabLayout {
   height: TABSTRIPHEIGHT;
}
@sprite .docTabPanel .tabLayoutLeft {
   gwt-image: 'docTabLeft';
}
@sprite .docTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutLeft {
   gwt-image: 'activeDocTabLeft';
}

@sprite .docTabPanel .tabLayoutCenter {
   gwt-image: 'docTabTile';
   padding-right: 2px;
   padding-left: 6px;
   vertical-align:middle;
}
@sprite .docTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutCenter {
   gwt-image: 'activeDocTabTile';
}

@sprite .docTabPanel .tabLayoutRight {
   gwt-image: 'docTabRight';
}
@sprite .docTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutRight {
   gwt-image: 'activeDocTabRight';
}
*/
.dirtyTab {
   color: #a00;
}

.dirtyTabIndicator {
   display: none;
}
.dirtyTab .dirtyTabIndicator {
   display: inline;
}

/** Module tabs **/
.gwt-TabLayoutPanelTab {
   cursor: default;
}

.moduleTabPanel .gwt-TabLayoutPanelTabs {
   font-size: 11px;
   height: 24px;
   background: MULTIPODTOP top repeat-x;
   background-color: white;
   cursor: default;
}
.moduleTabPanel .gwt-TabLayoutPanelTab {
   font-size: 11px;
   background: inherit;
}
.moduleTabPanel.minimized .gwt-TabLayoutPanelTab {
   margin-top: -1px;
}

.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutLeft {
   width: 3px;
   height: 23px;
   background: MULTIPODTABLEFT right top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutCenter {
   height: 23px;
   padding-left: 6px;
   padding-right: 6px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .tabLayoutRight {
   width: 3px;
   height: 23px;
   background: MULTIPODTABRIGHT left top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab .gwt-Label {
   font-weight: bold;
   padding-top: 4px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutLeft {
   height: 24px;
   width: 6px;
   background: MULTIPODACTIVETABLEFT right top no-repeat;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutCenter {
   height: 24px;
   background: MULTIPODACTIVETABTILE top repeat-x;
   padding-left: 3px;
   padding-right: 3px;
}
.moduleTabPanel .gwt-TabLayoutPanelTab-selected .tabLayoutRight {
   height: 24px;
   width: 6px;
   background: MULTIPODACTIVETABRIGHT left top no-repeat;
}
.moduleTabPanel .toolbar {
   background-image: TOOLBARBACKGROUND2;
}
.multiPodUtilityArea {
   background: MULTIPODTOPFADE left top repeat-y;
}
.firstTabSelected {
}

/** Toolbar **/

.toolbar .gwt-CheckBox {
   position: relative;
   top: 1px;
   margin: 0 9px 0 0;
   padding: 0;
   white-space: nowrap;
}

.toolbar {
   font-size: 11px;
   width: 100%;
   height: 23px;
   background: TOOLBARBACKGROUND repeat-x top;
   padding: 0 0 0 6px;
   white-space: nowrap;
}

.rstudio-themes-flat .toolbar {
   height: 22px;
   background: #f3f4f7;
   border-bottom: 1px solid #d6dadc;
}

.toolbar * {
   margin-top: 0px;
}

.toolbar input[type=checkbox] {
   margin: 0 3px 0 0;
   max-height: 14px;
}

.toolbarButton {
   border: none;
   background-color: transparent;
   margin: 0 8px 0 0;
   padding: 0;
   vertical-align: top;
   height: 21px;
   overflow: hidden;
}
.toolbarButton.noLabel {
   margin-right: 4px;
}
@if user.agent safari gecko1_8 {
   .toolbarButtonPushed {
      position: relative;
      top: 1px;
   }
}
.toolbarButtonPushed {
}
/* ... */

